Prevent fractions during stock split operations

Always round to the account fraction of the investment's security when
performing a stock split.

BUG: 445472
FIXED-IN: 5.1.3